<resources>
    <string name="action_settings">action_settings</string>
    <string name="app_name">集成控制</string>
    <string name="areaName">智能控制</string>

    <string name="user">账号:</string>
    <string name="password">密码:</string>
    <string name="userHint">账号</string>
    <string name="pwdHind">密码</string>
    <string name="savePwd">记住密码</string>
    <string name="login">登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="oldPwd">旧密码</string>
    <string name="newPwd">新密码</string>
    <string name="back">返回</string>

    <string name="system_config">系统设置</string>
    <string name="allArea">全局</string>
    <string name="area">区域</string>
    <string name="sence">场景</string>
    <string name="name">名称</string>

    <string name="warnning">警告</string>
    <string name="error">错误</string>
    <string name="tip">提示</string>
    <string name="close">关闭</string>

    <!-- 面板wifi设置 -->
    <string name="ssid">SSID</string>
    <string name="ip">网关IP</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="senceType">类别</string>

    <string name="no_sence">该区域下没有配置场景</string>

    <string name="area_param">区域配置</string>
    <string name="sence_param">场景配置</string>
    <string name="device_param">设备配置</string>
    <string name="panel_param">面板配置</string>
</resources>
